created libs folder and added jquery 2.2

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
   <head>
     <title>Angular 2 QuickStart</title>
 
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+
+    <!-- jQuery v2.2.0 -->
+    <script src="libs/jquery/jquery.min.js"></script>
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+
     <!-- 1. Load libraries -->
     <script src="https://code.angularjs.org/2.0.0-beta.0/angular2-polyfills.js"></script>
     <script src="https://code.angularjs.org/tools/system.js"></script>
     <script src="https://code.angularjs.org/tools/typescript.js"></script>
     <script src="https://code.angularjs.org/2.0.0-beta.0/Rx.js"></script>
     <script src="https://code.angularjs.org/2.0.0-beta.0/angular2.dev.js"></script>
+
+    <!-- <script src="app/assets/js/app.min.js"></script> -->
 
     <!-- 2. Configure SystemJS -->
     <script>
@@ -25,7 +36,10 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+      <div class="container">
+        <!-- Page Content goes here -->
+        <my-app>Loading...</my-app>
+      </div>
   </body>
 
 </html>
