--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <title>Angular 2 QuickStart</title>
 
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css"> -->
+    <link rel="stylesheet" href="libs/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="libs/bootstrap/bootstrap.css.map">
 
     <!-- jQuery v2.2.0 -->
     <script src="libs/jquery/jquery.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script> -->
+    <script src="libs/bootstrap/bootstrap.min.js"></script>
 
     <!-- 1. Load libraries -->
     <script src="https://code.angularjs.org/2.0.0-beta.0/angular2-polyfills.js"></script>
